losses and network model newly changed

--- a/config.ini
+++ b/config.ini
@@ -34,7 +34,7 @@ gpu_list = 0
 
 # Enable to show a live visualization of the latest checkpoint evaluation
 # while training
-# interactive_plot = True
+interactive_plot = False
 
 # Dataset to *train* on.
 # One of {synthia, kitti, kitti_ft, cityscapes, chairs}.
@@ -174,9 +174,10 @@ decay_after = 100000
 fb_weight = 0.2
 mask_occlusion = both
 occ_weight = 12.4
-epipolar_weight = 0.2
+epipolar_weight = 1.0
 sym_weight = 15.6
-sym_pose_weight = 0.0
+sym_pose_weight = 0.2
+mask_dyn_weight = 1.0
 
 [train_cityscapes]
 height = 512
